--- a/pages/goodssct/goodssct.wxml
+++ b/pages/goodssct/goodssct.wxml
@@ -5,10 +5,10 @@
     <view class="weui-tab__panel">
       <block wx:for="{{goods}}" wx:key="{{index}}">
         <view class="weui-media-box weui-media-box_appmsg" hover="true" hover-class="weui-cell_active" id="{{item}}" bindtap="cSure">
-          <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
+          <view class="weui-media-box__hd_in-appmsg">
             <image class="weui-media-box__thumb" src="{{pageData[item].thumbnail}}" background-size="cover"></image>
           </view>
-          <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
+          <view class="weui-media-box__bd_in-appmsg">
             <view class="weui-media-box__title">{{pageData[item].uName}}</view>
             <view class="weui-media-box__desc">{{pageData[item].title}}</view>
           </view>
