--- a/pages/mapsunit/mapsunit.wxml
+++ b/pages/mapsunit/mapsunit.wxml
@@ -8,10 +8,10 @@
   </view>
   <view class="page__bd">
     <view class="weui-media-box weui-media-box_appmsg" hover="true" hover-class="weui-cell_active">
-      <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
+      <view class="weui-media-box__hd_in-appmsg">
         <image class="weui-media-box__thumb" src="{{unitArray[sId].thumbnail}}" background-size="cover"></image>
       </view>
-      <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
+      <view class="weui-media-box__bd_in-appmsg">
         <view class="weui-media-box__title">{{unitArray[sId].uName}}</view>
         <view class="weui-media-box__desc">{{unitArray[sId].title}}</view>
       </view>
