--- a/pages/signup/signup.wxml
+++ b/pages/signup/signup.wxml
@@ -4,10 +4,10 @@
 <view class="page">
   <view class="page__hd">
     <view class="weui-media-box weui-media-box_appmsg" hover="true" hover-class="weui-cell_active">
-      <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
+      <view class="weui-media-box__hd_in-appmsg">
         <image class="weui-media-box__thumb" src="{{user.avatarUrl}}" background-size="cover"></image>
       </view>
-      <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
+      <view class="weui-media-box__bd_in-appmsg">
         <view class="weui-media-box__desc">尊敬的{{user.nickName}}{{user.gender==1 ? "先生":"女士"}}</view>
         <view class="weui-cell weui-media-box__title">
           <view class="weui-cell__hd">请检查您的姓名:</view>
