--- a/shops/member/login/login.wxml
+++ b/shops/member/login/login.wxml
@@ -1,9 +1,9 @@
 <view class="page">
     	 <view class="weui-media-box weui-media-box_appmsg" hover="true" hover-class="weui-cell_active">
-        <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
+        <view class="weui-media-box__hd_in-appmsg">
             <image class="weui-media-box__thumb" src="{{user.avatarUrl}}" background-size="cover"></image>
         </view>
-        <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
+        <view class="weui-media-box__bd_in-appmsg">
             <view class="weui-media-box__title">尊敬的{{user.nickName}}{{user.gender==1 ? "先生":"女士"}}</view>
             <view class="weui-media-box__desc">  请绑定手机号。</view>
         </view>
@@ -48,6 +48,6 @@
         </view>
     </view>
 
-    
-    
+
+
 </view>
