--- a/libs/weimport.wxml
+++ b/libs/weimport.wxml
@@ -43,7 +43,7 @@
 
 <template name="s_sObject">
   <view class="weui-cell">{{p}}:</view>
-  <view class="weui-cell" id="{{c}}" data-pNo="{{gname}}" bingtap="f_modalFieldBox">
+  <view class="weui-cell" id="{{c}}" data-pNo="{{gname}}" bingtap="f_modalFieldView">
     <view class="weui-media-box weui-media-box_appmsg" hover="true" hover-class="weui-cell_active">
       <view class="weui-media-box__hd_in-appmsg">
         <image class="weui-media-box__thumb" src="{{slave.thumbnail}}" background-size="cover"></image>
@@ -58,7 +58,7 @@
 
 <template name="s_sId">
   <view class="weui-cell">{{p}}:</view>
-  <view class="weui-cell" id="{{c}}" data-pNo="{{gname}}" bingtap="f_modalFieldBox">
+  <view class="weui-cell" id="{{c}}" data-pNo="{{gname}}" bingtap="f_modalFieldView">
     <view class="weui-media-box weui-media-box_appmsg" hover="true" hover-class="weui-cell_active">
       <view class="weui-media-box__hd_in-appmsg">
         <image class="weui-media-box__thumb" src="{{thumbnail}}" background-size="cover"></image>
@@ -87,7 +87,7 @@
   <view class="weui-cell">{{p}}:</view>
   <view class="weui-cells">
     <block wx:for="{{c}}" wx:key="{{index}}" wx:for-item="specsId">
-      <view class="weui-media-box weui-media-box_appmsg" hover="true" hover-class="weui-cell_active" id="{{specsId}}" data-pNo="{{gname}}" bingtap="f_modalFieldBox">
+      <view class="weui-media-box weui-media-box_appmsg" hover="true" hover-class="weui-cell_active" id="{{specsId}}" data-pNo="{{gname}}" bingtap="f_modalFieldView">
         <view class="weui-media-box__hd_in-appmsg">
           <image class="weui-media-box__thumb" src="{{master[specsId].thumbnail}}" background-size="cover"></image>
         </view>
@@ -165,7 +165,7 @@
   <map longitude="{{c.longitude}}" latitude="{{c.latitude}}" scale="28" show-location style="width: 100%; height: 300px;"></map>
 </template>
 
-<template name="s_modalAddressBox">
+<template name="s_modalEditAddress">
   <view class="weui-cell__hd">{{p}}:</view>
   <view class="weui-cell__bd">{{c.sName}}</view>
 </template>
@@ -310,5 +310,33 @@
     <image class="weui-media-box__thumb" src="{{avatarUrl}}" background-size="cover"></image>
     <view>uName</view>
   </view>
+</view>
+</template>
+
+<template name="msgEditSend">
+<form bindsubmit="i_msgEditSend">
+  <view class="page__ft">
+    <view class="weui-cell weui-cell_input weui-cell_vcode">
+      <view class="weui-cell__hd" id="fMultimedia" bindtap="i_msgEditSend">
+        <image class="weui-grid__icon" src="../../images/Multimedia.png"></image>
+        <input hidden="{{true}}" name="mtype" value="{{mtype}}"/>
+        <input hidden="{{true}}" name="wcontent" value="{{wcontent}}"/>
+      </view>
+      <view class="weui-cell__bd">
+        <input name="mtext" value="{{mtext}}" placeholder="请输入文字" />
+      </view>
+      <view class="weui-cell__ft">
+        <button class="weui-btn" formType="submit" id="sendMsg">＞</button>
+      </view>
+    </view>
+  </view>
+</form>
+<view class="weui-grids" hidden="{{enMultimedia}}">
+  <block wx:for="{{reqData}}" wx:key="{{index}}">
+    <view class="weui-grid" data-n="{{index+1}}" hover-class="weui-grid_active" id="iMultimedia" bindtap="i_msgEditSend">
+      <image class="weui-grid__icon" src="../../images/{{index+1}}.png"></image>
+      <view class="weui-grid__label">{{item.p}}</view>
+    </view>
+  </block>
 </view>
 </template>
