--- a/libs/wepage.wxml
+++ b/libs/wepage.wxml
@@ -204,10 +204,10 @@
 <view class="modal_box" id="fBack" bindtap="i_modalSelectPanel">
   <view animation="{{animationData}}" class="modal_attr_box" wx:if="{{showModalBox}}">
     <view class="page__title">选择{{reqData[n].p}}</view>
-    <view class="close_icon" id="fBack" bindtap="i_modalEditAddress">×</view>
+    <view class="close_icon" id="fBack" bindtap="i_modalSelectPanel">×</view>
     <view class="page__hd">
     <view class="weui-tab__panel">
-      <block wx:for="{{mPage}}" wx:key="{{index}}">
+      <block wx:for="{{tPage}}" wx:key="{{index}}">
         <view class="weui-media-box weui-media-box_appmsg" hover="true" hover-class="weui-cell_active" id="{{item}}" bindtap="i_modalSelectPanel">
           <view class="weui-media-box__hd_in-appmsg">
             <image class="weui-media-box__thumb" src="{{pageData[item].thumbnail}}" background-size="cover"></image>
@@ -217,9 +217,7 @@
             <view class="weui-media-box__desc">{{pageData[item].title}}</view>
           </view>
         </view>
-        <view wx:if="{{idClicked==item}}">
-          <button class="weui-cell__ft" size="mini">详情</button>
-        </view>
+        <view wx:if="{{idClicked==item}}" class="weui-cell__ft" id="{{item}}" data-pNo="{{pNo}}" bingtap="f_modalFieldView">详情</view>
       </block>
     </view>
     </view>
@@ -228,6 +226,34 @@
   <view wx:if="{{idClicked!=='0'}}" class="page__ft weui-footer_fixed-bottom">
     <button class="weui-btn" type="primary" bindtap="i_modalSelectPanel" id="fSelect">选定{{pageData[idClicked].uName}}</button>
   </view>
+</view>
+</template>
 
+<template name="p_modalSelectFile">
+<view class="modal_box" id="fBack" bindtap="i_modalSelectFile">
+  <view animation="{{animationData}}" class="modal_attr_box" wx:if="{{showModalBox}}">
+    <view class="page__title">选择{{reqData[n].p}}</view>
+    <view class="close_icon" id="fBack" bindtap="i_modalSelectFile">×</view>
+    <view class="page__hd">
+    <view class="weui-tab__panel">
+      <block wx:for="{{tPage}}" wx:key="{{index}}">
+        <view class="weui-media-box weui-media-box_appmsg" hover="true" hover-class="weui-cell_active" id="{{item}}" bindtap="i_modalSelectFile">
+          <view class="weui-media-box__hd_in-appmsg">
+            <image class="weui-media-box__thumb" src="../../images/{{pageData[item].fType}}.png" background-size="cover"></image>
+          </view>
+          <view class="weui-media-box__bd_in-appmsg">
+            <view class="weui-media-box__title">{{item}}</view>
+            <view class="weui-media-box__desc">保存时间：{{pageData[item].cTime}}   大小：{{pageData[item].fLen}}Kb</view>
+          </view>
+        </view>
+        <view wx:if="{{idClicked==item}}" id="{{item}}" id="fOpen" bingtap="i_modalSelectFile">>打开</view>
+      </block>
+    </view>
+    </view>
+    <view style="padding-bottom:100rpx;"></view>
+  </view>
+  <view wx:if="{{idClicked!=='0'}}" class="page__ft weui-footer_fixed-bottom">
+    <button class="weui-btn" type="primary" id="fSelect" bindtap="i_modalSelectFile">选定{{idClicked}}</button>
+  </view>
 </view>
 </template>
