--- a/inputedit/deal/deal.wxml
+++ b/inputedit/deal/deal.wxml
@@ -1,2 +1,7 @@
-<!--达成销售-->
-<text>达成销售</text>
+<import src="../../libs/wepage.wxml" />
+<view class="page">
+  <template is="p_navBar__headTab" data="{{...pw,...ht}}"/>
+  <view style="display:block;padding:1px;">
+    <canvas canvas-id="areaCanvas"  class="weui-canvas"> </canvas>
+  </view>
+</view>
