--- a/inputedit/deal/deal.wxml
+++ b/inputedit/deal/deal.wxml
@@ -1,7 +1,11 @@
 <import src="../../libs/wepage.wxml" />
+<import src="../../libs/weimport.wxml" />
 <view class="page">
   <template is="p_navBar__headTab" data="{{...pw,...ht}}"/>
-  <view style="display:block;padding:1px;">
+  <view wx:if="{{ht.pageCk==0}}" style="display:block;padding:1px;">
     <canvas canvas-id="areaCanvas"  class="weui-canvas"> </canvas>
+  </view>
+  <view class="weui-tab">
+    <template is="tabPanel" data="{{ tPage: cPage[ht.pageCk] , pageData , pNo }}"/>
   </view>
 </view>
