--- a/inputedit/deal/deal.wxml
+++ b/inputedit/deal/deal.wxml
@@ -2,10 +2,15 @@
 <import src="../../libs/weimport.wxml" />
 <view class="page">
   <template is="p_navBar__headTab" data="{{...pw,...ht}}"/>
-  <view wx:if="{{ht.pageCk==0}}" style="display:block;padding:1px;">
-    <canvas canvas-id="areaCanvas"  class="weui-canvas"> </canvas>
+  <view wx:if="{{sPages.length<2}}" style="display:block;padding:1px;">
+    <view hide="{{ht.pageCk==1}}" style="display:block;padding:1px;">
+      <canvas canvas-id="areaCanvas"  class="weui-canvas"> </canvas>
+    </view>
+    <view class="weui-tab">
+      <template is="tabPanel" data="{{ tPage: cPage[ht.pageCk] , pageData , pNo }}"/>
+    </view>
   </view>
-  <view class="weui-tab">
-    <template is="tabPanel" data="{{ tPage: cPage[ht.pageCk] , pageData , pNo }}"/>
+  <view wx:else>
+    <template is="p_{{sPages[sPages.length-1].pageName}}" data="{{showModalBox,animationData,tPage:cPage[ht.pageCk], pageData,reqData,...sPages[sPages.length-1]}}"/>
   </view>
 </view>
