--- a/inputedit/evaluate/evaluate.wxml
+++ b/inputedit/evaluate/evaluate.wxml
@@ -1,2 +1,13 @@
-
-<text>客户评价及统计</text>
+<import src="../../libs/wepage.wxml" />
+<import src="../../libs/weimport.wxml" />
+<view class="page">
+  <template is="p_navBar__headTab" data="{{...pw,...ht}}"/>
+  <view wx:if="{{sPages.length<2}}">
+    <view class="weui-tab">
+      <template is="tabIndex" data="{{ indexPage: cPage[ht.pageCk] , pageData , mPage: mPage[ht.pageCk], pNo }}"/>
+    </view>
+  </view>
+  <view wx:else>
+    <template is="p_{{sPages[sPages.length-1].pageName}}" data="{{showModalBox,animationData,tPage:cPage[ht.pageCk], pageData,reqData,...sPages[sPages.length-1]}}"/>
+  </view>
+</view>
