--- a/inputedit/fprocedure/fprocedure.wxml
+++ b/inputedit/fprocedure/fprocedure.wxml
@@ -1,27 +1,28 @@
-<!-- <import src="../import/impedit.wxml"/>
+<import src="../import/impedit.wxml"/>
 <import src="../../libs/wepage.wxml" />
-<view class="page" id="approval-{{pNo}}">
-  <form bindsubmit="fSubmit">
-    <view class="page__bd_spacing" id="{{targetId}}">
-      <block wx:for="{{reqData}}" wx:key="index">
-        <template is="i_{{item.t}}" data="{{...item,c:vData[item.gname],n:index}}"></template>
-      </block>
-    </view>
-    <view style="padding-bottom:100rpx;"></view>
-    <view class="page__ft weui-footer_fixed-bottom" style="z-index:998;flex-direction:row;" id="{{dObjectId}}">
-      <button class="weui-btn" style="display:{{enMenu=='none' && uEV ? 'inline-block' : 'none'}}" type="primary" size="mini" formType="submit" id="fSave">提交</button>
-      <button class="weui-btn" style="display:{{enMenu=='none' && targetId=='0' ? 'inline-block' : 'none'}}" type="primary" size="mini" formType="submit" id="fStorage">保存</button>
-      <button class="weui-btn" style="display:{{ enMenu }}" type="warn" size="mini" formType="submit" id="fdeldata">删除</button>
-      <button class="weui-btn" style="display:{{ enMenu }}" type="default" size="mini" formType="submit" id="fupdate">替换</button>
-      <button class="weui-btn" style="display:{{ enMenu }}" type="primary" size="mini" formType="submit" id="fenins">插入</button>
-    </view>
-  </form>
+<view class="page">
+  <template is="p_navBar__back" data="{{...pw,navBarTitle}}"/>
+  <view wx:if="{{sPages.length==1}}" class="page__sub" id="model-{{pNo}}">
+    <form bindsubmit="fSubmit">
+      <view class="page__bd_spacing" id="{{targetId}}">
+        <block wx:for="{{reqData}}" wx:key="index">
+          <template is="i_{{item.t}}" data="{{...item,c:vData[item.gname],n:index}}"></template>
+        </block>
+      </view>
+      <view style="padding-bottom:100rpx;"></view>
+      <view class="page__ft weui-footer_fixed-bottom" id="{{dObjectId}}">
+        <button class="weui-btn" style="display:{{enMenu=='none' && uEV ? 'inline-block' : 'none'}}" type="primary" size="mini" formType="submit" id="fSave">提交</button>
+        <button class="weui-btn" style="display:{{enMenu=='none' && targetId=='0' ? 'inline-block' : 'none'}}" type="primary" size="mini" formType="submit" id="fStorage">保存</button>
+        <button class="weui-btn" style="display:{{ enMenu }}" type="warn" size="mini" formType="submit" id="fdeldata">删除</button>
+        <button class="weui-btn" style="display:{{ enMenu }}" type="default" size="mini" formType="submit" id="fupdate">替换</button>
+        <button class="weui-btn" style="display:{{ enMenu }}" type="primary" size="mini" formType="submit" id="fenins">插入</button>
+      </view>
+    </form>
     <view hidden="{{enIns}}">
       <template is="i_insdata"></template>
     </view>
-  <template is="p_modalEditAddress" data="{{pageName,...fieldFormat,gname,p,c}}">
-</view> -->
-<view class="page">
-  <template is="p_navBar__back" data="{{...pw,navBarTitle}}"/>
-  <template is="p_{{sPages[sPages.length-1].pageName}}" data="{{...sPages[sPages.length-1],showModalBox,animationData,vData,pageData,reqData}}"/>
+  </view>
+  <view wx:else>
+    <template is="p_{{sPages[sPages.length-1].pageName}}" data="{{...sPages[sPages.length-1],showModalBox,animationData,vData,pageData,reqData}}"/>
+  </view>
 </view>
